samples/_failures_safe/1761598755_0ff26c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5b4b1d6d.c: In function ‘main’:
./samples/SAFE/__tmp_5b4b1d6d.c:157:9: error: expected declaration or statement at end of input
  157 |         free(compressed_buf.data);
      |         ^~~~
./samples/SAFE/__tmp_5b4b1d6d.c:157:9: error: expected declaration or statement at end of input
